cluster/core/kube-prometheus-stack/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-controller-manager
  namespace: kube-system
  labels:
    app.kubernetes.io/name: kube-controller-manager
spec:
  selector:
    app.kubernetes.io/name: kube-controller-manager
  ports:
  - name: https-metrics
    protocol: TCP
    port: 10257
    targetPort: 10257
  type: ClusterIP
